# heroes

./: ANNOUNCE  AUTHORS  BUGS  ChangeLog  ChangeLog.00  ChangeLog.01  GNUmakefile  HACKING  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  aclocal.m4  configure  configure.ac
arch/: Makefile.inc
arch/mingw32/: cross.sh  dest-readme-lib  dest-readme-txt  dest-run-bat
doc/: Makefile.am  Makefile.in  doc.scm  heroes.html  heroes.info  heroes.info-1  heroes.info-2  heroes.texi  stamp-vti  version.texi
intl/: ChangeLog  dcigettext.c
lib/: Makefile.am  Makefile.in  basename.h  cast.c  cast.h  filelock.c  filelock.h  getshline.c  getshline.h  isdir.h  unlocked-io.h  w_dirent.c  w_dirent.h  xstrduplwr.c  xstrduplwr.h
m4/: Makefile.inc  README  bigendian.m4  checkpkg.m4  compat.m4  debug.m4  definedir.m4  devel.m4  filelock.m4  findheader.m4  gccwarn.m4  generic.m4  getoptlong.m4  h-allegro.m4  h-debug.m4  h-display.m4  h-ggi.m4  h-joystick.m4  h-media.m4  h-mikmod.m4  h-obsolete.m4  h-paths.m4  h-sdl.m4  h-sdlmixer.m4  h-sound.m4  htmldoc.m4  libalt.m4  memdebug.m4  mkdir.m4  normpath.m4  pkgeneric.m4  relpaths.m4  runcheck.m4  stdrelpaths.m4  w_dirent.m4
man/: Makefile.am  Makefile.in  heroes.6
misc/: 01-intl.patch  05-po.patch  copytile.c  heroes-1.xpm  heroes-2.xpm  heroes-3.xpm  heroes-4.xpm  heroes-5.xpm  heroes-6.xpm  heroes-7.xpm  heroes-8.xpm
po/: Makefile.in.in  POTFILES.in  de.gmo  de.po  fr.gmo  fr.po  heroes.pot  it.gmo  it.po  nl.gmo  nl.po  pt_BR.gmo  pt_BR.po
src/: Makefile.am  Makefile.in  argv.c  argv.h  bonus.c  bonus.h  bytesex.h  camera.c  camera.h  config.h.in  const.c  const.h  debugchn.def  debugchn.h  debugchn.tpl  debughash.c  debughash.gperf  debughash.h  debugmsg.c  debugmsg.h  endscroll.c  endscroll.h  errors.c  errors.h  explosions.c  explosions.h  extras.c  extras.h  fader.c  fader.h  fastmem.h  font.h  fontdata.c  fontdata.h  gameid.c  gameid.h  generic_list.h  hedlite.c  hedlite.h  helptext.c  (+91 more)
src/etc/: Makefile.inc  heroesrc
src/lvl/: Makefile.inc  README  access.h  de_body.c  de_head.c  en_body.c  en_head.c  format.h  free.c  in_body.c  load.c  lvl.h  lvl_priv.h  privacc.c  save.c
src/media/: Makefile.inc  README  joystick.h  keyb.c  keyb.h  keyb_low.h  keysdef.h  keyvalues.h  sfx.c  sfx.h  strack.c  strack.h  video.c  video.h  video_low.h
src/media/allegro/: joystick.c  keyb.c  keyvalues.c  video.c
src/media/dummy/: joystick.c  keyb.c  keysdef.c  keyvalues.c  sfx.c  strack.c  video.c
src/media/ggi/: keyb.c  keyvalues.c  video.c
src/media/gii/: joystick.c
src/media/mikmod/: sfx.c  strack.c
src/media/sdl/: joystick.c  keyb.c  keyvalues.c  video.c
src/media/sdl_mixer/: sfx.c  strack.c
src/sys/: Makefile.inc  README  main.h
src/sys/allegro/: main.c
src/sys/std/: main.c
tests/: Makefile.am  Makefile.in  defs  demo.test  intro.test  lvlsave.c  lvlsave.test
tools/: Makefile.inc  README  alpha.sh  autogen.sh  cvsboot.sh  exnews.pl  fetish-sync.sh  genm4mam.sh  genpotfiles.sh  readme.sed  upgettext.sh
